# maildir-server

./: Cargo.toml  build.rs  build.sh
assets/: body.html  dark.css  index.html  light.css  maildir.js  main.css
frontend/: Cargo.toml
frontend/src/: lib.rs
src/: main.rs
