[package]
name = "maildir-server"
version = "0.1.0"
authors = ["Casey Tucker <dctucker@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mailparse = "0.13.0"
maildir = "0.4.2"
#azul = { git = "https://github.com/maps4print/azul" }

[replace]
'maildir:0.4.2' = { path = "./maildir" }

[dependencies.web-view]
version = "0.6.3"
features = ["edge"]

[dependencies.serde_json]
version = "1.0"
