[package]
name = "maildir-server"
version = "0.1.0"
authors = ["Casey Tucker <dctucker@hotmail.com>"]
edition = "2018"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "MAILDIR-SERVER.EXE"
LegalCopyright = "Copyright \u00a9 2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mailparse = "0.13.0"
maildir = "0.4.2"
#azul = { git = "https://github.com/maps4print/azul" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
html_sanitizer = "0.1.1"
webbrowser = "0.8.2"
web-view = "0.7"
actix-web = "1.0"
actix-rt = "0.2"
futures = "0.1"
mime_guess = "2.0.1"
rust-embed = "5.1.0"
walkdir = "2.3.1"
chrono = "0.4.13"
cached = "0.18.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[replace]
'maildir:0.4.2' = { path = "./maildir" }

[dependencies.webview-sys]
#version = "0.6.2"
features = ["edge"]
